Fixed issue causing small browser windows to cause overlapping text.
Adjusted the minimum page width required before the 'BACK TO' links
appear, such that it vanishes prior to the nav text reaching it.

--- a/assets/stylesheets/docs.css
+++ b/assets/stylesheets/docs.css
@@ -84,7 +84,14 @@ input.gsc-search-button:focus, input.gsc-search-button:hover {
 
 
 /* Bretts Template Overrides */
-
+.developer-porta-header__navigation__back {
+  display: none;
+}
+@media (min-width: 78em) {
+  .developer-porta-header__navigation__back {
+    display: inline-block;
+  }
+}
 .developer-portal-content__wrapper {
   padding: 1.8em 2.4em;
 }
